cert-manager/ingress-aks.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata: 
  name: ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    # Let's Encrypt Issuer
    certmanager.k8s.io/issuer: "letsencrypt-staging"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  # IngressのTLS設定
  tls:
  - hosts:
    - "cloud.frieza.dev"
    secretName: letsencrypt-staging
  rules:
  - host: cloud.frieza.dev
    http:
      paths:
      - path: /app1
        backend: 
          serviceName: app1
          servicePort: 3000
      - path: /app2
        backend: 
          serviceName: app2
          servicePort: 3000
