cert-manager/ingress-local.yaml
kind: Ingress
apiVersion: networking.k8s.io/v1beta1
metadata: 
  name: ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    # 自己署名の証明書Issuerを指定
    certmanager.k8s.io/issuer: "selfsigning-issuer"
spec:
  # IngressのTLS設定
  tls:
  - hosts:
    - frieza.dev
    secretName: selfsigning-cert
  rules:
  - host: frieza.dev
    http:
      paths:
      - path: /app1
        backend: 
          serviceName: app1
          servicePort: 3000
      - path: /app2
        backend: 
          serviceName: app2
          servicePort: 3000
